objects/Litmos_Integration_Console__c.object
<CustomObject>
    <fields>
        <fullName>Integrated_User_Count__c</fullName>
        <description>Count of User which got integrated.</description>
        <label>Integrated User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsUploadedFromLitmosUserBulkSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When records will be created from LitmosUserBulkSync Vf Page this checkbox will be true.</description>
        <label>IsUploadedFromLitmosUserBulkSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSON_User_Id__c</fullName>
        <description>Json of the Id Set which got integrated.</description>
        <label>JSON User Id</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Litmos_Bulk_User_Email__c</fullName>
        <description>When bulk upload of Users is made from the VF Page "LitmosUserBulkSync" then a record will be created in this object and email Id will be stored in this field.</description>
        <label>Litmos Bulk User Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litmos_Bulk_User_Id__c</fullName>
        <description>When bulk upload of Users is made from the VF Page "LitmosUserBulkSync" then a record will be created in this object and Id will be stored in this field.</description>
        <label>Litmos Bulk User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litmos_Integration_Body__c</fullName>
        <label>Litmos Integration Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Success_Error_Result_Log__c</fullName>
        <description>This will store the result whether error/success.</description>
        <label>Success/Error Result Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>This will store the details of the integration data that got synced when Community User and synced and Assigned to particular teams through API Call.</description>
    <label>Litmos Integration Console</label>
    <nameField>
        <displayFormat>LIC-{000000}</displayFormat>
        <label>Litmos Integration COnsole Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litmos Integration Consoles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>